fixed login dialogue not showing bug

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -27,7 +27,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1;
+    z-index: 99;
     background: #000000d0;
 }
 .li-dialogue-container{
